# linalg

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/workflows/: rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_weekly.yml
.rhiza/: .env  template.yml
book/marimo/notebooks/: end_to_end.py  norms_and_validity.py
docs/: api.md  numerical-behavior.md
docs/development/: MUTATION.md
src/cvx/linalg/: __init__.py  cholesky.py  cov_to_corr.py  det.py  eigh.py  eigvals.py  ewm_cov.py  exceptions.py  inv.py  lstsq.py  norm.py  operators.py  pca.py  power_iteration.py  qr.py  rand_cov.py  solve.py  svd.py  types.py  valid.py
src/cvx/linalg/core/: __init__.py  exceptions.py  types.py
src/cvx/linalg/covariance/: __init__.py  cov_to_corr.py  ewm_cov.py  pca.py  rand_cov.py
src/cvx/linalg/decomposition/: __init__.py  cholesky.py  eigh.py  eigvals.py  power_iteration.py  qr.py  svd.py
src/cvx/linalg/kkt/: __init__.py  bordered.py  projection.py
src/cvx/linalg/norm/: __init__.py  norm.py
src/cvx/linalg/operators/: __init__.py  base.py  composite.py  dense.py  factor.py  gram.py  operators.py
src/cvx/linalg/solve/: __init__.py  det.py  inv.py  lstsq.py  solve.py
tests/: __init__.py  conftest.py  test_marimo_notebooks_layout.py
tests/fuzz/: fuzz_linalg.py
tests/linalg/: __init__.py  test_cholesky.py  test_cov_to_corr.py  test_det.py  test_eigvals.py  test_ewm_cov.py  test_exceptions.py  test_inv.py  test_lstsq.py  test_norm.py  test_operators.py  test_package.py  test_pca.py  test_power_iteration.py  test_property.py  test_qr.py  test_solve.py  test_svd.py  test_svd_k.py  test_types.py  test_valid.py
tests/linalg/core/: __init__.py  test_exceptions.py  test_types.py
tests/linalg/covariance/: __init__.py  test_cov_to_corr.py  test_ewm_cov.py  test_pca.py
tests/linalg/decomposition/: __init__.py  test_cholesky.py  test_eigh.py  test_power_iteration.py  test_qr.py  test_svd.py  test_svd_k.py
tests/linalg/kkt/: __init__.py  test_bordered.py  test_kkt.py  test_projection.py
tests/linalg/norm/: __init__.py
tests/linalg/operators/: __init__.py  _helpers.py  test_base.py  test_composite.py  test_dense.py  test_factor.py  test_gram.py  test_operators.py  test_restricted.py
tests/linalg/solve/: __init__.py  test_inv.py  test_solve.py
