[project]
name = "cvx-linalg"
version = "0.4.0"
description = "Linear algebra utilities for portfolio optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
repository = "https://github.com/Jebel-Quant/linalg"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

[tool.hatch.build]
include = [
    "LICENSE",
    "README.md",
    "src/cvx/linalg",
]

[dependency-groups]
dev = [
    "pandas>=2.0.0",
]

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-magic = true

[tool.deptry.package_module_name_map]
numpy = "numpy"
