[project]
name = "cvx-linalg"
version = "0.6.1"
description = "Linear algebra utilities for portfolio optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "polars>=1.40.0",
]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/linalg"
Repository = "https://github.com/Jebel-Quant/linalg"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

[tool.hatch.build]
include = [
    "LICENSE",
    "README.md",
    "src/cvx/linalg",
]

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "pandas>=3.0.0",
    "marimo>=0.20.0",
    "pytest>=9.0.3",
]
test = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.4.0",
]

[tool.deptry]
known_first_party = ["cvx"]

[tool.deptry.package_module_name_map]
numpy = "numpy"
polars = "polars"
hypothesis = "hypothesis"
pandas = "pandas"
marimo = "marimo"
pytest = "pytest"
"cvx-linalg" = "cvx"
